<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_bar_filter_action"
        android:icon="@drawable/abs__ic_clear"
        android:showAsAction="always"
        android:title="@string/text_filter">
        <menu>
            <item
                android:id="@+id/filter_fuel_events"
                android:icon="@drawable/abs__ic_clear_disabled"
                android:title="@string/text_hide_fill_up"/>
            <item
                android:id="@+id/filter_repair_events"
                android:icon="@drawable/abs__ic_clear_normal"
                android:title="@string/text_hide_repairs"/>
            <item
                android:id="@+id/filter_maintenance_events"
                android:icon="@drawable/abs__ic_clear_normal"
                android:title="@string/text_hide_maintenance"/>
            <item
                android:id="@+id/filter_payment_events"
                android:icon="@drawable/abs__ic_go"
                android:title="@string/text_hide_payments"/>
        </menu>
    </item>
    <item
        android:id="@+id/action_bar_add_event_action"
        android:icon="@drawable/abs__ic_search"
        android:showAsAction="always"
        android:title="@string/text_add_event">
        <menu>
            <item
                android:id="@+id/add_fuel_event"
                android:icon="@drawable/abs__ic_clear_disabled"
                android:title="@string/text_add_fill_up"/>
            <item
                android:id="@+id/add_repair_event"
                android:icon="@drawable/abs__ic_clear_normal"
                android:title="@string/text_add_repair"/>
            <item
                android:id="@+id/add_maintenance_event"
                android:icon="@drawable/abs__ic_clear"
                android:title="@string/text_add_maintenance"/>
            <item
                android:id="@+id/add_payment_event"
                android:icon="@drawable/abs__ic_go"
                android:title="@string/text_add_payment"/>
        </menu>
    </item>
    <item
        android:id="@+id/add_fuel_action"
        android:icon="@drawable/abs__ic_clear_disabled"
        android:showAsAction="never"
        android:title="@string/text_add_fill_up"/>
    <item
        android:id="@+id/add_repair_action"
        android:icon="@drawable/abs__ic_clear_normal"
        android:showAsAction="never"
        android:title="@string/text_add_repair"/>
    <item
        android:id="@+id/add_maintenance_action"
        android:icon="@drawable/abs__ic_clear"
        android:showAsAction="never"
        android:title="@string/text_add_maintenance"/>
    <item
        android:id="@+id/add_payment_action"
        android:icon="@drawable/abs__ic_go"
        android:showAsAction="never"
        android:title="@string/text_add_payment"/>
    <item
        android:id="@+id/delete_action"
        android:icon="@drawable/abs__ic_search"
        android:showAsAction="never"
        android:title="@string/text_delete_events"/>

</menu>