<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MaintenanceEventActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Vehicle spinner -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vehicle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/vehicle_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Date edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.silentcorp.autotracker.controls.DateView
            android:id="@+id/date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/hint_date" />

        <!-- Description edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_description"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="1" >
        </EditText>

        <!-- Cost edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_cost"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.silentcorp.autotracker.controls.NumberView
            android:id="@+id/cost_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </com.silentcorp.autotracker.controls.NumberView>

        <!-- Odometer edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_odometer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.silentcorp.autotracker.controls.NumberView
            android:id="@+id/odometer_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </com.silentcorp.autotracker.controls.NumberView>

        <!-- Place edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_place"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/place_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_place"
            android:inputType="textMultiLine"
            android:lines="1" >
        </EditText>

        <!-- Note edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_note"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/note_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ellipsis"
            android:inputType="textMultiLine"
            android:lines="1" >
        </EditText>

        <!-- Buttons -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCancel"
                android:text="@string/text_cancel" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSave"
                android:enabled="false"
                android:text="@string/text_save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>