<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.silentcorp.autotracker"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FuelEventActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Vehicle spinner -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vehicle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/vehicle_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Date edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.silentcorp.autotracker.controls.DateView
            android:id="@+id/date_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/hint_date" />

        <!-- Fuel type spinner -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fuel_type"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/fuel_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Quantity edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_quantity"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.silentcorp.autotracker.controls.NumberView
            android:id="@+id/quantity_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:dialogTitle="@string/text_quantity"
            custom:rangeMin="0"
            custom:valueDecimal="true"
            custom:nullAllowed="false" />

        <!-- Price per unit edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_price_per_unit"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.silentcorp.autotracker.controls.SuffixView
            android:id="@+id/price_per_unit_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            custom:valueDecimal="true" />

        <!-- Total cost edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_total_cost"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.silentcorp.autotracker.controls.NumberView
            android:id="@+id/total_cost_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:dialogTitle="@string/text_total_cost"
            custom:rangeMin="0"
            custom:valueDecimal="true"
            custom:nullAllowed="false" />

        <!-- Odometer edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_odometer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <com.silentcorp.autotracker.controls.NumberView
            android:id="@+id/odometer_number_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:dialogTitle="@string/text_odometer"
            custom:rangeMin="0"
            custom:valueDecimal="false"
            custom:nullAllowed="true"
            custom:step="1000" />

        <!-- Place edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_place"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/place_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_place"
            android:inputType="textMultiLine"
            android:lines="1" >
        </EditText>

        <!-- Note edit text -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_note"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/note_edit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_ellipsis"
            android:inputType="textMultiLine"
            android:lines="1" >
        </EditText>

        <!-- Buttons -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCancel"
                android:text="@string/text_cancel" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onSave"
                android:text="@string/text_save" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>